// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`numberList > 1. with code 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "nodes": [],
        "number": 1,
        "raw": "1. ",
        "rawNumber": "1",
        "type": "numberList",
      },
      {
        "raw": "\`code\`",
        "text": "code",
        "type": "code",
      },
    ],
    "type": "line",
  },
]
`;

exports[`numberList > 1. with decoration 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "nodes": [],
        "number": 1,
        "raw": "1. ",
        "rawNumber": "1",
        "type": "numberList",
      },
      {
        "decos": [
          "*-1",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[* deco]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`numberList > 1. with no space is not numberList 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "1.not numberList",
        "text": "1.not numberList",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`numberList > Minimum numberList 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "nodes": [],
        "number": 1,
        "raw": "1. ",
        "rawNumber": "1",
        "type": "numberList",
      },
    ],
    "type": "line",
  },
]
`;

exports[`numberList > No head 1. is not numberList 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "a 1. not numberList",
        "text": "a 1. not numberList",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`numberList > Quoted 1. is not numberList 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "nodes": [
          {
            "raw": " 1. Quoted",
            "text": " 1. Quoted",
            "type": "plain",
          },
        ],
        "raw": "> 1. Quoted",
        "type": "quote",
      },
    ],
    "type": "line",
  },
]
`;

exports[`numberList > Simple numberList 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "nodes": [
          {
            "raw": "Simple numberList",
            "text": "Simple numberList",
            "type": "plain",
          },
        ],
        "number": 1,
        "raw": "1. Simple numberList",
        "rawNumber": "1",
        "type": "numberList",
      },
    ],
    "type": "line",
  },
]
`;
